Prevent overflow when displaying Kern County, CA.

--- a/county_map.css
+++ b/county_map.css
@@ -7,22 +7,6 @@ body,
   overflow: hidden;
 }
 
-#data-box {
-  position: absolute;
-  text-align: center;
-  font-family: "Roboto", "Arial", sans-serif;
-  font-size: 13px;
-  z-index: 5;
-  box-shadow: 0 4px 6px -4px #333;
-  padding: 5px 10px;
-  background: rgb(255, 255, 255);
-  border: rgb(229, 229, 229) 1px solid;
-  top: 2%;
-  left: 2%;
-  width: 660px;
-  height: auto;
-}
-
 #github {
   position: absolute;
   z-index: 5;
@@ -50,6 +34,36 @@ body,
   width: 66px;
 }
 
+#data-box {
+  position: absolute;
+  text-align: center;
+  font-family: "Roboto", "Arial", sans-serif;
+  font-size: 13px;
+  z-index: 5;
+  box-shadow: 0 4px 6px -4px #333;
+  padding: 5px 10px;
+  background: rgb(255, 255, 255);
+  border: rgb(229, 229, 229) 1px solid;
+  top: 2%;
+  left: 2%;
+  width: 680px;
+  height: auto;
+}
+
+#state-data {
+  float: left;
+  width: 40%;
+  margin-bottom: 3%;
+}
+
+#county-data {
+  float: left;
+  margin-left: 3%;
+  margin-bottom: 3%;
+  margin-right: 3%;
+}
+
+
 #county-name, #state-name {
   font-weight: bold;
   text-align: justify;
@@ -68,19 +82,6 @@ body,
   #county-name, #state-name {
     font-size: 20px;
   }
-}
-
-#state-data {
-  float: left;
-  width: 40%;
-  margin-bottom: 3%;
-}
-
-#county-data {
-  float: left;
-  margin-left: 3%;
-  margin-bottom: 3%;
-  margin-right: 3%;
 }
 
 .inactive-policy {
